# langchain_vectordb_benchmarks

./: README.md
backend/: pyproject.toml
backend/.devcontainer/: devcontainer.json  docker-compose.dev.yml
backend/src/vectordbs/: README.md  qdrantClient.py
frontend/: home.py  pyproject.toml
frontend/.devcontainer/: devcontainer.json  docker-compose.dev.yml
infra/: .infra-env  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
infra/vectorstores/chroma/: docker-compose.yml
infra/vectorstores/qdrant/: docker-compose.yml
