[tool.poetry]
name = "llamaindex-vectordb-benchmarks-backend"
version = "0.1.0"
description = ""
authors = ["dionysnab <dionys.nabarro@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.20"
fastapi = "^0.110.0"
qdrant-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
