[tool.poetry]
name = "llamaindex-vectordb-benchmarks-frontend"
version = "0.1.0"
description = ""
authors = ["dionysnab <dionys.nabarro@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
